--- a/Css/CssIndex.css
+++ b/Css/CssIndex.css
@@ -1,3 +1,7 @@
 *{
+    font-family:'Courier New', Courier, monospace;
     font-size: 1.2rem;
 }
+/* body{
+    background-color: rgb(red, green, blue);
+} */
