--- a/Css/CssIndex.css
+++ b/Css/CssIndex.css
@@ -17,7 +17,7 @@ h1{
 p{
     color:steelblue;
 }
-
+/* 搭配nav轉向 */
 #navbarToggleExternalContent{
     transform: translateX(-100%);
     transition: transform .35s ease;
@@ -25,7 +25,6 @@ p{
     height: 100%;
     min-height: 100%;
 }
-
 #navbarToggleExternalContent.menu-show{
     transform: translateX(0%);
 }
